--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">养生视线</string>
+    <string name="app_name">淘色记</string>
     <string-array name="tab_text">
         <item>养生视线</item>
         <item>分类</item>
