客户端周末小bug修复与完善

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -10,7 +10,7 @@
     <string name="ad_company_phone">手机:</string>
     <string name="ad_company_business">业务:</string>
 
-    <string name="app_exit_message">确定要退出应用养生视线?</string>
+    <string name="app_exit_message">确定要退出情趣宝?</string>
 
     <string name="info_options">选项</string>
     <string name="info_options_share">分享</string>
