字符串修改

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -24,7 +24,7 @@
 
     <string name="setting_contact_tel">"tel:15800413861"</string>
 
-    <string name="setting_about_subject">养生视线\nHealth World</string>
+    <string name="setting_about_subject">情趣宝</string>
     <string name="setting_about_description">每天饮食,常识等资讯，您的健康小助手！</string>
 
     <string name="setting_share_app_subject">向你分享一个精彩应用《养生视线》</string>
